# pytorch-static

./: .gitignore  build.sh  fbgemm-flags.patch  linux-build.sh  remove-flag.patch  toolchain.cmake  windows-build.bat  windows-build.ps1
example/: CMakeLists.txt  example.cc
example/cmake/: TorchConfig.cmake
